--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-h5py
+h5py==2.7.0
 Keras==2.0.3
-numpy
-opencv-python
-sklearn
+numpy==1.13.1
+opencv-python==3.3.0.9
+scikit-learn==0.19.0
+tensorflow==1.3.0
+theano==0.9.0
